fix menu spill over during loading converted hard number ship/equipment scan arrays to api_sortno null detect arrays (why it wasnt this way before i dont remember, maybe there was a reason)

--- a/viewer/index.css
+++ b/viewer/index.css
@@ -432,6 +432,7 @@ resource-box
     left: 0;
     background-color: rgba(37,37,37,0.67);
     z-index: -20;
+    overflow: hidden;
 }
 
 .esc-menu.show
